继承的拖拽

--- a/blue/08_Ajax/01笔记.html
+++ b/blue/08_Ajax/01笔记.html
@@ -10,7 +10,7 @@
 
         //编码：aaa.txt的文件编码为utf-8
 
-        //阻止缓存：获取服务器上最新的东西，变化的数据
+        //阻止缓存：获取服务器上最新的东西，实时变化的数据
 
         //'aaa.txt?t='+new Date().getTime()
 
