--- a/blue/09_面向对象/01笔记.html
+++ b/blue/09_面向对象/01笔记.html
@@ -36,6 +36,8 @@
     //本地对象Object,Function,Array、内置对象Global,Math、宿主对象DOM、BOM
 
     //内置对象  >>  静态对象 var obj = new Math(); xxx 不能new
+
+    //Array非静态对象，需要new才能用其方法
     
 
     </script>
