--- a/02码农俱乐部/01焦点图/07左右滑动每次只切换一张.html
+++ b/02码农俱乐部/01焦点图/07左右滑动每次只切换一张.html
@@ -26,7 +26,7 @@ window.onload = function(){
     var oUlWidth = aUlLi[0].offsetWidth;
     var iNow = 0;
     var bBtn = true;
-    //也可以用延迟的方法解决
+    //运动完在执行下一次运动，也可以用延迟的方法解决
 
     for(var i = 1;i < aUlLi.length;i++){
         aUlLi[i].style.left = oUlWidth + "px";
