--- a/05JavaScript高级程序设计/02Test.html
+++ b/05JavaScript高级程序设计/02Test.html
@@ -1,10 +1,19 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
+<!DOCTYPE html>
+<html lang="en">
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>无标题文档</title>
+    <meta charset="UTF-8">
+    <title>Document</title>
 </head>
-
 <body>
+    <script>
+    //person1.constructor == Person
+    function Person(name){
+        this.name = name;
+    }
+
+    var o = new Object();
+    Person.call(o,"yangk");
+    console.log(o.name);
+    </script>
 </body>
 </html>
